--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -469,6 +469,7 @@
                 android:layout_marginEnd="8dp"
                 android:drawableLeft="@drawable/location"
                 android:elevation="10dp"
+                android:gravity="center"
                 android:text="@string/location"
                 android:textSize="24sp"
                 android:textStyle="bold"
