--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <string-array name="events_options">
+        <item>@string/storm</item>
+        <item>@string/heat_advisory</item>
+        <item>@string/heat</item>
         <item>@string/rain</item>
         <item>@string/snow</item>
         <item>@string/fog</item>
@@ -11,6 +14,6 @@
     </string-array>
     <string-array name="sound_type_array">
         <item>@string/notifications</item>
-        <item>@string/alarm</item>
+        <item>@string/alert</item>
     </string-array>
 </resources>
