--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?android:attr/colorPrimary"
-        tools:context=".DetailsFragment">
+        tools:context=".ui.DetailsFragment">
 
         <View
             android:id="@+id/obaqueBG2"
