--- a/app/src/main/res/layout/card_times.xml
+++ b/app/src/main/res/layout/card_times.xml
@@ -40,8 +40,8 @@
 
             <ImageView
                 android:id="@+id/image_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/cloud" />
 
