--- a/app/src/main/res/layout/card_times.xml
+++ b/app/src/main/res/layout/card_times.xml
@@ -42,6 +42,7 @@
                 android:id="@+id/image_time"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
+                android:layout_gravity="center"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/cloud" />
 
