--- a/app/src/main/res/layout/fragment_start_pref.xml
+++ b/app/src/main/res/layout/fragment_start_pref.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".startPref.view.StartPrefFragment"
+        tools:context=".preferences.view.StartPrefFragment"
         android:background="?android:attr/colorPrimary">
         <View
             android:id="@+id/obaqueBG"
