--- a/app/src/main/res/drawable/track.xml
+++ b/app/src/main/res/drawable/track.xml
@@ -14,7 +14,7 @@
     </item>
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/light_xl_blue"/>
+            <solid android:color="@color/dark_blue"/>
             <corners android:radius="30dp"/>
             <stroke android:width="1dp"
                 android:color="@color/dark_orange"/>
