--- a/app/src/main/res/drawable/thumb.xml
+++ b/app/src/main/res/drawable/thumb.xml
@@ -3,7 +3,7 @@
 
 <item android:state_checked="true">
     <shape android:shape="oval">
-        <solid android:color="@color/dark_blue"/>
+        <solid android:color="@color/medium_blue"/>
         <stroke android:width="1dp"
             android:color="@color/dark_orange"/>
         <size android:width="30dp" android:height="30dp"/>
@@ -14,9 +14,9 @@
 </item>
     <item android:state_checked="false">
         <shape android:shape="oval">
-            <solid android:color="@color/dark_blue"/>
+            <solid android:color="@color/medium_blue"/>
             <stroke android:width="1dp"
-                android:color="@color/dark_orange"/>
+                android:color="@color/light_xl_blue"/>
             <size android:width="30dp" android:height="30dp"/>
 
 
