--- a/app/src/main/res/drawable/track.xml
+++ b/app/src/main/res/drawable/track.xml
@@ -17,7 +17,7 @@
             <solid android:color="@color/dark_blue"/>
             <corners android:radius="30dp"/>
             <stroke android:width="1dp"
-                android:color="@color/dark_orange"/>
+                android:color="@color/light_xl_blue"/>
             <size  android:height="20dp"/>
 
 
