--- a/app/src/main/res/layout/fragment_on_boarding1.xml
+++ b/app/src/main/res/layout/fragment_on_boarding1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_bg_up"
-    tools:context=".onboarding.screens.OnBoarding1Fragment">
+    tools:context=".ui.onboarding.screens.OnBoarding1Fragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -24,4 +24,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="360dp"
+        android:layout_height="360dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="32dp"
+        android:src="@drawable/on2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
