--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -99,11 +99,13 @@
         <action
             android:id="@+id/action_startPrefFragment_to_homeFragment"
             app:destination="@id/homeFragment"
-            app:popUpTo="@id/splashFragment"
+            app:popUpTo="@id/startPrefFragment"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_startPrefFragment_to_mapsFragment"
-            app:destination="@id/mapsFragment" />
+            app:destination="@id/mapsFragment"
+            app:popUpTo="@id/mapsFragment"
+            app:popUpToInclusive="true" />
         <argument
             android:name="myLoc"
             app:argType="com.google.android.gms.maps.model.LatLng"
@@ -131,12 +133,18 @@
             app:argType="string" />
         <action
             android:id="@+id/action_mapsFragment_to_favoriteFragment"
-            app:destination="@id/favoriteFragment" />
+            app:destination="@id/favoriteFragment"
+            app:popUpTo="@id/mapsFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_mapsFragment_to_startPrefFragment"
-            app:destination="@id/startPrefFragment" />
+            app:destination="@id/startPrefFragment"
+            app:popUpTo="@id/mapsFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_mapsFragment_to_settingFragment"
-            app:destination="@id/settingFragment" />
+            app:destination="@id/settingFragment"
+            app:popUpTo="@id/mapsFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
